# libstereo

./: CMakeLists.txt  README.md  calib.cpp  match.cpp  test.cpp
src/: stereocalib.cpp  stereomatch.cpp
